# ontoskills

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  PHILOSOPHY.md  PHILOSOPHY_zh.md  README.md  README_zh.md  astro.config.mjs  cli.py  loader.py  package.json  pyproject.toml  schemas.py  security.py  transformer.py
.planning/: PHASE1_DESIGN.md
benchmark/: CLAUDE.md  README.md  compare.py  config.py  docgraph_coverage.py  merge_results.py  prebuild_opencode.sh  requirements.txt  run.py  run_sequential.sh  smoketest.py  state.py
cli/: ontoskills.js
compiler/: exceptions.py  loader.py  pyproject.toml  schemas.py  serialization.py  validator.py
contrib/: ONTOSKILLS_INTEGRATION_PLAN.md
contrib/ontoskills-py/: README.md  pyproject.toml  skills_to_ttl.py  wisp_skill_bridge.py
contrib/ontoskills-py/ontoskills/: __init__.py  client.py  formatter.py  types.py
core/: CHANGELOG.md  README.md  cli.py  config.py  core_ontology.py  linter.py  pyproject.toml  registry.py  serialization.py  storage.py
docs/: architecture.md  cli.md  compiler.md  documentation-overhaul-design.md  getting-started.md  knowledge-extraction.md  marketplace.md  overview.md  registry.md  roadmap.md  semantic-discovery.md  store.md  troubleshooting.md
mcp/: CHANGELOG.md  CLAUDE_CODE_GUIDE.md  Cargo.toml  README.md  README_zh.md
ontoskills/: core.ttl  ontoclaw-core.ttl  ontoskills-core.ttl
registry/: README.md
site/: .gitignore  README.md  astro.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
specs/: 2026-03-24-skill-compiler-v2-design.md  ontoclaw.shacl.ttl  (+1 more)
(+284 files in other folders)
